FullQa New/src/objects/GoLiveTask__c.object
<CustomObject>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The internal user that the task should be completed by</description>
        <inlineHelpText>The internal user that the task should be completed by</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GoLiveTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>A place to leave a note regarding a particular GoLive Task</description>
        <inlineHelpText>A place to leave a note regarding a particular GoLive Task</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompleteDate__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoLiveProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that the GoLive task is related to</description>
        <inlineHelpText>The product that the GoLive task is related to</inlineHelpText>
        <label>GoLive Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>GoLiveTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoLive__c</fullName>
        <label>GoLive</label>
        <referenceTo>GoLive__c</referenceTo>
        <relationshipName>GoLiveTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskDescription__c</fullName>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>(Deprecated) GoLiveTask</label>
    <nameField>
        <label>GoLiveTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GoLiveTasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>